Fix text align center

--- a/source/yoso-browsehappy-directive.scss
+++ b/source/yoso-browsehappy-directive.scss
@@ -24,6 +24,7 @@ $browsehappy__success--font-color:        rgb(255, 255, 255);
 
     &.visible {
         display: block;
+        text-align: center;
     }
 
     .oops {
